# carve-exe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
carve_exe/: app.py  carver.py
carve_exe/filetypes/: __init__.py  elf.py  filetype.py  pe.py
